login page, addPatient

--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: #fff;
 }
+
+.container {
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 15px;
+    padding-left: 15px;
+}
