--- a/client/src/pages/LoginPage/loginpage.module.css
+++ b/client/src/pages/LoginPage/loginpage.module.css
@@ -3,23 +3,9 @@
     display: flex;
     flex-direction: column;
     height: 90vh;
-    background-image: url('../../doctor.svg');
+    background-image: url('../../svg/doctor.svg');
     background-repeat: no-repeat;
     background-position: bottom right;
-}
-
-
-.logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 21px;
-}
-
-.logoHeading {
-    padding: 20px;
-    font-weight: 400;
-    font-size: 12px;
 }
 
 .form {
@@ -34,7 +20,7 @@
 }
 
 
-.formHeading {
+.form__heading {
     margin-bottom: 30px;
     font-weight: 600;
     font-size: 14px;
@@ -42,8 +28,8 @@
     color: #000000;
 }
 
-.formLogin,
-.formPassword {
+.form__login,
+.form__password {
     padding: 10px;
     margin-bottom: 10px;
     border: none;
@@ -51,7 +37,7 @@
 
 }
 
-.formButton {
+.form__button {
     width: 106px;
     height: 36px;
     background: #005691;
@@ -60,13 +46,7 @@
     color: #fff;
 }
 
-.loginRight {
-    align-self: center;
-    margin-bottom: 100px;
-
-}
-
-.loginHeading {
+.login__heading {
     text-align: center;
     font-style: normal;
     font-weight: 400;
@@ -77,4 +57,10 @@
 .center {
     justify-content: space-between;
     display: flex;
+}
+.right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
