bag fix, mainPage

--- a/client/src/components/Navbar/navbar.module.css
+++ b/client/src/components/Navbar/navbar.module.css
@@ -22,18 +22,28 @@
 }
 
 .btn__exit {
+    width: 22px;
+    height: 22px;
     background-color: transparent;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.5308 6.71428L21 11M21 11L16.5308 15.2857M21 11L7.15385 11M16.3846 21L4.07692 20.9971C2.37846 20.9957 1 19.7171 1 18.14L1 3.86143C1 3.10367 1.32418 2.37694 1.90121 1.84112C2.47825 1.30531 3.26087 1.00429 4.07692 1.00429L16.3846 1' stroke='%234A3D52' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
     border: none;
     cursor: pointer;
 }
 
-.btn__exit_path {
+
+/* .btn__exit_path {
     stroke: #4A3D52;
 }
 
 .btn__exit:hover .btn__exit_path {
     stroke: red;
 
+} */
+
+.btn__exit:hover {
+    background-image: url("data:image/svg+xml,%3Csvg width='22' height='22' viewBox='0 0 22 22' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16.5308 6.71428L21 11M21 11L16.5308 15.2857M21 11L7.15385 11M16.3846 21L4.07692 20.9971C2.37846 20.9957 1 19.7171 1 18.14L1 3.86143C1 3.10367 1.32418 2.37694 1.90121 1.84112C2.47825 1.30531 3.26087 1.00429 4.07692 1.00429L16.3846 1' stroke='red' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+     
 }
 
 .nav__right {
